--- a/gosu-test/pom.xml
+++ b/gosu-test/pom.xml
@@ -22,6 +22,11 @@
       <artifactId>gosu-core</artifactId>
       <version>${project.version}</version>
     </dependency>
+    <dependency>
+      <groupId>org.jboss</groupId>
+      <artifactId>jandex</artifactId>
+      <version>2.0.0.Final</version>
+    </dependency>
   </dependencies>
 
   <build>
