Try to capture unexpected surefire vm exit

--- a/circle.yml
+++ b/circle.yml
@@ -31,6 +31,8 @@ test:
     - mkdir -p $CIRCLE_TEST_REPORTS/junit/
     - find . -type f -regex ".*/target/surefire-reports/.*xml" -exec cp {} $CIRCLE_TEST_REPORTS/junit/ \;
     - find . -type f -regex ".*/target/surefire-reports/.*-output.txt" -exec cp {} $CIRCLE_TEST_REPORTS/junit/ \;
+    - mkdir -p $CIRCLE_TEST_REPORTS/vm_crash/
+    - find . -type f -regex ".*/hs_err*" -exec cp {} $CIRCLE_TEST_REPORTS/vm_crash/ \;
 
 deployment:
   snapshots:
