--- a/circle.yml
+++ b/circle.yml
@@ -26,13 +26,13 @@ general:
 test:
   override:
     # Only executes tests
-    - mvn surefire:test -B
+    - mvn surefire:test -B -e -X
   post:
     - mkdir -p $CIRCLE_TEST_REPORTS/junit/
     - find . -type f -regex ".*/target/surefire-reports/.*xml" -exec cp {} $CIRCLE_TEST_REPORTS/junit/ \;
     - find . -type f -regex ".*/target/surefire-reports/.*-output.txt" -exec cp {} $CIRCLE_TEST_REPORTS/junit/ \;
     - mkdir -p $CIRCLE_TEST_REPORTS/vm_crash/
-    - find / ! -readable -prune -o -type f -regex ".*/hs_err.*" -exec cp {} $CIRCLE_TEST_REPORTS/vm_crash/ \;
+    - find / ! -readable -prune -o -type f -regex ".*/hs_err.*" -print -exec cp {} $CIRCLE_TEST_REPORTS/vm_crash/ \;
 
 deployment:
   snapshots:
