--- a/gosu-test/pom.xml
+++ b/gosu-test/pom.xml
@@ -87,21 +87,20 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
           <includes>
-            <include>gw/config*/**/*Test.class</include>
+           <!-- <include>gw/config*/**/*Test.class</include>
             <include>gw/internal*/**/*Test.class</include>
             <include>gw/lang*/**/*Test.class</include>
             <include>gw/spec*/**/*Test.class</include>
             <include>gw/test*/**/*Test.class</include>
             <include>gw/util*/**/*Test.class</include>
-            <include>gw/xml*/**/*Test.class</include>
+            <include>gw/xml*/**/*Test.class</include>-->
           </includes>
           <excludes>
-            <exclude>gw/lang/reflect/java/asm/AsmClassTest*</exclude>
-            <exclude>gw/lang/enhancements/CoreArrayEnhancementTest*</exclude>
             <exclude>gw/internal/gosu/parser/java/*</exclude>
             <exclude>gw/test/SuiteTest*</exclude>
             <exclude>**/*BenchmarkTest*</exclude>
             <exclude>**/junit/framework/TestSuite*BenchmarkTest*</exclude>
+            <exclude>gw/perf/PerfTest</exclude>
           </excludes>
         </configuration>
       </plugin>
@@ -124,21 +123,6 @@
           </execution>
         </executions>
       </plugin>
-      <!--<plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-jar-plugin</artifactId>
-        <version>2.3.2</version>
-        <configuration>
-          <archive>
-            <manifest>
-              <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
-            </manifest>
-            <manifestEntries>
-              <Contains-Sources>gs, gsx, gst</Contains-Sources>
-            </manifestEntries>
-          </archive>
-        </configuration>
-      </plugin>-->
     </plugins>
   </build>
   
