Diasble ant tests; their relevance going forward is in doubt

--- a/gosu-ant-tools/pom.xml
+++ b/gosu-ant-tools/pom.xml
@@ -55,6 +55,7 @@
         <configuration>
           <!-- tests in this module only will each receive a unique JVM -->
           <reuseForks>false</reuseForks>
+          <skip>true</skip>
         </configuration>
       </plugin>
     </plugins>
