--- a/circle.yml
+++ b/circle.yml
@@ -25,8 +25,9 @@ general:
 
 test:
   override:
-    # Only executes tests
-    - mvn surefire:test -B
+      - mvn surefire:test -B:
+          parallel: true
+
   post:
     - mkdir -p $CIRCLE_TEST_REPORTS/junit/
     - find . -type f -regex ".*/target/surefire-reports/.*xml" -exec cp {} $CIRCLE_TEST_REPORTS/junit/ \;
