--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,11 +7,6 @@ jobs:
       MAVEN_OPTS: "-Xmx512m"
     docker:
       - image: circleci/java:8
-    branches:
-      ignore:
-	- /rel\/.*/
-    artifacts:
-      - "gosu-test/target/site" # preserve the generated HTML test reports 
     steps:
       - checkout
       - run:
@@ -28,6 +23,8 @@ jobs:
       - run: mkdir -p $CIRCLE_TEST_REPORTS/junit/
       - run: find . -type f -regex ".*/target/surefire-reports/.*xml" -exec cp {} $CIRCLE_TEST_REPORTS/junit/ \;
       - run: find . -type f -regex ".*/target/surefire-reports/.*-output.txt" -exec cp {} $CIRCLE_TEST_REPORTS/junit/ \;
+      - store_artifacts:
+	  path: gosu-test/target/site
   deploy:
     docker:
       - image: circleci/java:8
@@ -40,9 +37,13 @@ jobs:
 	  command: ./ci_scripts/deploy_snapshot.sh
 workflows:
   version: 2
-  build_and_test:
+  build_test_deploy:
     jobs:
       - build
+	  filters:
+	    branches:
+	      ignore:
+		- /rel\/.*/
       - test:
           requires:
             - build
