--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ jobs:
       TERM: dumb
       MAVEN_OPTS: "-Xmx512m"
     machine:
-      - image: oraclejdk8
+      image: circleci/classic:latest
     steps:
       - checkout
       - run:
@@ -14,7 +14,7 @@ jobs:
           command: mvn install -DskipTests=true -B
   test:
     machine:
-      - image: oraclejdk8
+      image: circleci/classic:latest
     steps:
       - checkout
       - run:
