--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,8 +13,8 @@ jobs:
           name: Compile Only
           command: mvn install -DskipTests=true -B
   test:
-    machine:
-      image: circleci/classic:latest
+    docker:
+      - image: circleci/java:8
     steps:
       - checkout
       - run:
