--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,6 +34,10 @@ jobs:
       - store_artifacts:
           path: "gosu-test/target/site"
   deploy:
+    environment:
+      TZ: "/usr/share/zoneinfo/America/Los_Angeles"
+      TERM: dumb
+      MAVEN_OPTS: "-Xmx512m"
     machine:
       image: circleci/classic:latest
     steps:
