--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,18 +33,18 @@ jobs:
       - run: sudo find . -type f -regex ".*/target/surefire-reports/.*-output.txt" -exec cp {} $CIRCLE_TEST_REPORTS/junit/ \;
       - store_artifacts:
           path: "gosu-test/target/site"
-  deploy:
-    environment:
-      TZ: "/usr/share/zoneinfo/America/Los_Angeles"
-      TERM: dumb
-      MAVEN_OPTS: "-Xmx512m"
-    machine:
-      image: circleci/classic:latest
-    steps:
-      - checkout
-      - run:
-          name: deploy
-          command: ./ci_scripts/deploy_snapshot.sh
+  #deploy:
+  #  environment:
+  #    TZ: "/usr/share/zoneinfo/America/Los_Angeles"
+  #    TERM: dumb
+  #    MAVEN_OPTS: "-Xmx512m"
+  #  machine:
+  #    image: circleci/classic:latest
+  #  steps:
+  #    - checkout
+  #    - run:
+  #        name: deploy 
+  #        command: ./ci_scripts/deploy_snapshot.sh
 workflows:
   version: 2
   build_test_deploy:
@@ -57,4 +57,3 @@ workflows:
       - test:
           requires:
             - build
-      - deploy:
