--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,20 +33,20 @@ jobs:
       - run: sudo find . -type f -regex ".*/target/surefire-reports/.*-output.txt" -exec cp {} $CIRCLE_TEST_REPORTS/junit/ \;
       - store_artifacts:
           path: "gosu-test/target/site"
-      - deploy:
+     # - deploy:
+     #     command: ./ci_scripts/deploy_snapshot.sh
+  deploy:
+    environment:
+      TZ: "/usr/share/zoneinfo/America/Los_Angeles"
+      TERM: dumb
+      MAVEN_OPTS: "-Xmx512m"
+    machine:
+      image: circleci/classic:latest
+    steps:
+      - checkout
+      - run:
+          name: deploy 
           command: ./ci_scripts/deploy_snapshot.sh
-  #deploy:
-  #  environment:
-  #    TZ: "/usr/share/zoneinfo/America/Los_Angeles"
-  #    TERM: dumb
-  #    MAVEN_OPTS: "-Xmx512m"
-  #  machine:
-  #    image: circleci/classic:latest
-  #  steps:
-  #    - checkout
-  #    - run:
-  #        name: deploy 
-  #        command: ./ci_scripts/deploy_snapshot.sh
 workflows:
   version: 2
   build_test_deploy:
@@ -57,5 +57,8 @@ workflows:
               ignore:
                 - /rel\/.*/
       - test:
+          requires:
+            - build
+      - deploy:
           requires:
             - build
