--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,6 @@ jobs:
       image: circleci/classic:latest
     steps:
       - checkout
-      - run: java -version
       - run: mvn -version
       - run:
           name: Compile Only
@@ -21,13 +20,14 @@ jobs:
       MAVEN_OPTS: "-Xmx512m"
     machine:
       image: circleci/classic:latest
+    parallelism: 2
     steps:
       - checkout
-      - run: java -version
       - run: mvn -version
       - run:
           name: Run tests
-          command: mvn install surefire:test -B
+          #command: mvn install surefire:test -B
+          command: ./runParallel.sh
       - run: sudo mkdir -p $CIRCLE_TEST_REPORTS/junit/
       - run: sudo find . -type f -regex ".*/target/surefire-reports/.*xml" -exec cp {} $CIRCLE_TEST_REPORTS/junit/ \;
       - run: sudo find . -type f -regex ".*/target/surefire-reports/.*-output.txt" -exec cp {} $CIRCLE_TEST_REPORTS/junit/ \;
