--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,6 +13,14 @@ jobs:
       - run:
           name: Compile Only
           command: mvn install -DskipTests=true -B
+      - run:
+          name: Run tests
+          command: mvn install surefire:test -B
+      - run: sudo mkdir -p $CIRCLE_TEST_REPORTS/junit/
+      - run: sudo find . -type f -regex ".*/target/surefire-reports/.*xml" -exec cp {} $CIRCLE_TEST_REPORTS/junit/ \;
+      - run: sudo find . -type f -regex ".*/target/surefire-reports/.*-output.txt" -exec cp {} $CIRCLE_TEST_REPORTS/junit/ \;
+      - store_artifacts:
+          path: "gosu-test/target/site"
   test:
     environment:
       TZ: "/usr/share/zoneinfo/America/Los_Angeles"
@@ -56,9 +64,9 @@ workflows:
             branches:
               ignore:
                 - /rel\/.*/
-      - test:
-          requires:
-            - build
+      #- test:
+      #    requires:
+      #      - build
       - deploy:
           requires:
-            - test
+            - build
