--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -69,4 +69,8 @@ workflows:
       #      - build
       - deploy:
           requires:
-            - build
+            - build:
+                filters:
+                  branches:
+                    ignore:
+                      - /^(?rel\/).+/
