--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,8 +5,10 @@ jobs:
       TZ: "/usr/share/zoneinfo/America/Los_Angeles"
       TERM: dumb
       MAVEN_OPTS: "-Xmx512m"
-    machine:
-      image: circleci/classic:latest
+    docker:
+      - image: circleci/java:8
+    #machine:
+     # image: circleci/classic:latest
     steps:
       - checkout
       - run: mvn -version
@@ -48,8 +50,10 @@ jobs:
       TZ: "/usr/share/zoneinfo/America/Los_Angeles"
       TERM: dumb
       MAVEN_OPTS: "-Xmx512m"
-    machine:
-      image: circleci/classic:latest
+    docker:
+      - image: circleci/java:8
+    #machine:
+     # image: circleci/classic:latest
     steps:
       - checkout
       - run:
@@ -69,8 +73,8 @@ workflows:
       #      - build
       - deploy:
           requires:
-            - build:
-                filters:
-                  branches:
-                    ignore:
-                      - /^(?rel\/).+/
+            - build
+                #filters:
+                 # branches:
+                   # ignore:
+                     # - /^(?rel\/).+/
